# parprog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: flt_type.h  mpi_error.h  sdl_error.h
lib/: CMakeLists.txt
lib/OpenMP/: CMakeLists.txt  hello_world.c  sum.c
lib/exp_calc/: CMakeLists.txt  parallel_with_floats.c  parallel_with_long_arithmetic.c  sequential.c
lib/heat_equation/: CMakeLists.txt  heat_equation.c  initial_conditions.h
lib/integral/: CMakeLists.txt  integral.c
lib/ray_tracer/: CMakeLists.txt  colors.c  colors.h  geometry.c  geometry.h  obj_model.c  obj_model.h  ray_casting.c  ray_casting.h  ray_tracer.c  scene.c  scene.h  scenes.rtr
lib/ray_tracer/cmake/: FindBSD.cmake
lib/support/: CMakeLists.txt  mpi_error.c
support/: install.sh  test.sh
test/: mpi.py  test.py  test_ctx.py
test/OpenMP/: test.py
test/exp_calc/: test.py
test/exp_calc/parallel_with_long_arithmetic/: e10.txt  e100.txt  e1000.txt  e10000.txt
test/exp_calc/sequential/: double.txt  float.txt
test/integral/: double.txt  float.txt  test.py
test/ray_tracer/: test.py
test/ray_tracer/1/: scenes.rtr
